# hgvcuj

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: GDI.h  bytebeat.hpp  logon.hpp  logonBytes.h  registry.h  stages.hpp
logon/: CMakeLists.txt  README.md  main.cpp
src/: bytebeat.cpp  main.cpp  stages.cpp
src/payloads/: GDI.cpp  logon.cpp  registry.cpp
src/payloads/gdirender/: gdieffects.cpp  hsv_shift.cpp
